test/parallel/taskPar/taskIntents/errorAccessRecordArrayField.good
errorAccessRecordArrayField.chpl:8: error: cannot assign to const variable
errorAccessRecordArrayField.chpl:1: note: The shadow variable 'r' is constant due to task intents in this parallel statement
